fixtures/errors/let_redeclare.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: cannot redeclare identifier `x` in the same scope
 --> errors/let_redeclare.js:2:1
2 | let x = 2;
  | ^^^^^^^^^^

